--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -16,6 +16,7 @@
   width: 100%;
   height: 200px;
   overflow: hidden;
+  display: block;
 }
 
 .image {
@@ -26,6 +27,11 @@
 
 .content {
   padding: 24px;
+}
+
+.nameLink {
+  text-decoration: none;
+  color: inherit;
 }
 
 .name {
