--- a/src/app/admin/products/create/create.module.css
+++ b/src/app/admin/products/create/create.module.css
@@ -477,7 +477,7 @@
 .previewImage {
   width: 100%;
   height: 140px;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
@@ -989,7 +989,7 @@
 .productImage {
   width: 100%;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
